I0034: aktivieren und deaktivieren funzt
